// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Reference Reference Type (Generic) 1`] = `
"import _Runtime from \\"@manta-style/runtime\\";

const A = _Runtime.TypeAliasDeclaration(\\"A\\", function (typeFactory) {
  const T = typeFactory.TypeParameter(\\"T\\");

  const type = _Runtime.UnionType([_Runtime.StringKeyword, T]);

  return type;
}, []);

const B = _Runtime.TypeAliasDeclaration(\\"B\\", function (typeFactory) {
  const type = A.argumentTypes(_Runtime.NumberKeyword);
  return type;
}, []);"
`;

exports[`Type Reference Reference Type (Non-generic) 1`] = `
"import _Runtime from \\"@manta-style/runtime\\";

const A = _Runtime.TypeAliasDeclaration(\\"A\\", function (typeFactory) {
  const type = _Runtime.StringKeyword;
  return type;
}, []);

const B = _Runtime.TypeAliasDeclaration(\\"B\\", function (typeFactory) {
  const type = A;
  return type;
}, []);"
`;
